Fixed grid window overflow issue where content expanded grid cell

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -163,13 +163,16 @@ body {
     background-color: rgba(255, 255, 255, 0.9);
     display: none;
     font-family: 'Lato', sans-serif;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.8rem 1fr;
+    overflow-y: hidden;
     z-index: 5000;
 
     &-home {
         background-color: rgba(0,0,0,0.9);
         border: 1px solid rgb(255, 255, 255);
         color: $primary-5;
-        display: inline-block;
+        display: grid;
 
         &-content {
             font-family: 'Courier New', Courier, monospace;
@@ -185,7 +188,8 @@ body {
         display: flex;
         font-family: 'Courier New', 'Courier New', Courier, monospace;
         font-size: 1.2rem;
-        height: 1.8rem;
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
         justify-content: space-between;
         letter-spacing: 2px;
 
@@ -222,7 +226,9 @@ body {
     }
 
     &-content {
-        height: 100%;
+        max-height: 100%;
+        grid-column: 1 / -1;
+        grid-row: 2 / 3;
         overflow-y: scroll;
     }
 }
